fixing alignment

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(24, 23, 23);
 }
 
 html
@@ -15,6 +14,11 @@ html
     scroll-behavior: smooth;
 }
 
+body
+{
+    
+    background-color: rgb(24, 23, 23);;
+}
 
 .header
 {
@@ -49,6 +53,7 @@ html
 {
     font-family: "Outfit", sans-serif;
     color: aliceblue;
+    background-color:black;
     font-size: 22px;
     width: 120px;
     
@@ -72,7 +77,7 @@ html
     grid-template-columns: repeat(7, 5fr);
     gap: 20px;
     width: 100%;
-    padding-left: 55px;
+    padding-left: 48px;
     padding-right: 55px;
 }
 
@@ -185,6 +190,8 @@ html
     {
         display: grid;
         grid-template-columns: repeat(3, 5fr);
+        padding-left: 10%;
+        padding-right: 10%;
         width: 100%;
         gap: 16px;
     }
@@ -200,6 +207,23 @@ html
     {
         font-size: 14px;
     }
+
+    .go-up
+{
+    position:fixed;
+    z-index: 1000;
+    bottom: 20px;
+    cursor: pointer;
+    color: white;
+    font-size: 34px;
+    display: flex;
+    padding-right: 5px;
+    width: 100%;
+    flex-direction: row-reverse;
+    text-decoration: none;
+    background-color: transparent;
+
+}
     .footer
     {
         display: flex;
